feat: add vanilla js dark mode

--- a/IMDB/public/index.html
+++ b/IMDB/public/index.html
@@ -25,6 +25,10 @@
 						<li><a class="link hover-color" href="#">em cartaz</a></li>
 					</ul>
 					<div class="header-user">
+						<div class="toggle">
+							<input id="switch" type="checkbox" name="theme">
+							<label for="switch">Toggle</label>
+					</div>
 						<img src="img/walter-white.jpg" alt="user image">
 						<span>Walter White</span>
 					</div>
@@ -333,5 +337,6 @@
 				</ul>
 			</div>
 		</footer>
+		,<script src="/js/scripts.js"></script>
 	</body>
 </html>
