chore: update header icons

--- a/instagram/public/index.html
+++ b/instagram/public/index.html
@@ -56,6 +56,16 @@
 							<img class="stories__image" src="img/profiles/black-panther/black-panther-profile.jpg" alt="Black Panther">
 						</a href="#">
 					</li>
+					<li class="user__image">
+						<a href="#" class="stories__image__wrapper user__image__wrapper">
+							<img class="stories__image" src="img/profiles/domino/domino-profile.jpg" alt="Domino">
+						</a href="#">
+					</li>
+					<li class="user__image">
+						<a href="#" class="stories__image__wrapper user__image__wrapper">
+							<img class="stories__image" src="img/profiles/yoda/yoda-profile.jpg" alt="Yoda">
+						</a href="#">
+					</li>
 				</ul>
 			</section>
 			<section class="container">
